# einit

./: .buildinfo  .gitignore  CITATION.cff  MANIFEST.in  README.md  ab_test_einit_reiya.py  algorithm.html  api.html  build_docs.py  examples.html  genindex.html  index.html  integration.html  objects.inv  py-modindex.html  pylint.rc  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  visual_tests.ipynb  visual_tests_stub.py
.doctrees/: algorithm.doctree  api.doctree  environment.pickle  examples.doctree  index.doctree  integration.doctree
.github/workflows/: deploy_docs.yml  pylint.yml
_modules/: index.html
_modules/einit/: einit.html
_sources/: algorithm.rst.txt  api.rst.txt  examples.rst.txt
docs/: algorithm.rst  conf.py  examples.rst  index.rst  integration.rst
einit/: __init__.py  einit.py
einit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
einit_docs/: algorithm.rst  examples.rst  index.rst  integration.rst
einit_examples/: bbox_overlap_test.py  cube_feature_matching.py  point_reoder_test.py  rand_overlap_test.py  visual_tests.ipynb
einit_tests/: test_einit.py  test_features.py  test_integration.py
examples/: bbox_overlap_test.py  point_reoder_test.py  rand_overlap_test.py  visual_tests.ipynb  visualize_failures.py
reiya/: __init__.py  reiya.py
reiya_tests/: __init__.py  test_reiya.py
tests/: __init__.py  test_einit.py  test_integration.py  visual_tests.ipynb  visualize_failures.py
